fix: unvisible card detail component in desktop

--- a/src/main/resources/static/css/detail.css
+++ b/src/main/resources/static/css/detail.css
@@ -21,12 +21,26 @@
     box-shadow: calc(var(--shadow-offset) + 2px) calc(var(--shadow-offset) + 2px) 0px var(--border-color);
 }
 
-.block-large {
+/* 첫 번째 행: 좌상단과 우상단 */
+.detail-block:nth-child(1) {
     grid-column: 1;
+    grid-row: 1;
 }
 
-.block-small {
+.detail-block:nth-child(2) {
     grid-column: 2;
+    grid-row: 1;
+}
+
+/* 두 번째 행: 좌하단과 우하단 */
+.detail-block:nth-child(3) {
+    grid-column: 1;
+    grid-row: 2;
+}
+
+.detail-block:nth-child(4) {
+    grid-column: 2;
+    grid-row: 2;
 }
 
 .block-header {
